--- a/2/003 DOM Tree Modification Completed/03-task.html
+++ b/2/003 DOM Tree Modification Completed/03-task.html
@@ -62,6 +62,18 @@
         (В прошлом уроке были рассмотрены примеры, показывающие как получить доступ к родительским элементам, так как 
         удалять нужно не ячейку td, в которой находится значение, а строку tr, в которой расположена эта ячейка).
         */
+
+        let table = document.querySelector("#statsTable");
+
+        let rowLength = table.rows[0].cells.length;
+
+        for (let i = 0; i < table.rows.length; i++) {
+            let lastCell = table.rows[i].cells[rowLength -1];
+            if (lastCell.textContent < 100) {
+                table.rows[i].remove();
+                i--;
+            }
+        }
     </script>
 </body>
 
