complete 04-task.html

--- a/2/003 DOM Tree Modification Completed/04-task.html
+++ b/2/003 DOM Tree Modification Completed/04-task.html
@@ -61,6 +61,21 @@
             }
         ];
 
+        let table = document.createElement("table");
+        source.forEach(obj => {
+            let row = document.createElement("tr");
+            let cell = document.createElement("td");
+            let secondCell = document.createElement("td");
+
+            cell.textContent = obj.month;
+            row.append(cell);
+
+            secondCell.textContent = obj.amount;
+            row.append(secondCell);
+
+            table.append(row);
+        });
+        document.body.append(table);
     </script>
 </body>
 
