complete 05-task.html

--- a/2/003 DOM Tree Modification Completed/05-task.html
+++ b/2/003 DOM Tree Modification Completed/05-task.html
@@ -491,6 +491,12 @@
             for (const friend of user.friends) {
                 ul.insertAdjacentHTML("beforeend", `<li>${friend.name}</li>`);
             }
+
+            function checkFriends() {
+                if (user.friends.length < 5)
+                    div.style.border = "2px solid red";
+            }
+            checkFriends();
             
             div.append(ul);
             return div;
