complete 05-task.html

--- a/2/004 Props and Attributes Completed/05-task.html
+++ b/2/004 Props and Attributes Completed/05-task.html
@@ -29,6 +29,12 @@
             age: "25",
         }
 
+        let divs = document.querySelectorAll("[data-bind]");
+
+        for (const div of divs) {
+            const value = div.dataset.bind;
+            div.append(user[value]);
+        }
     </script>
 </body>
 
