complete 01-task.html

--- a/2/005 Styles Completed/01-task.html
+++ b/2/005 Styles Completed/01-task.html
@@ -13,7 +13,7 @@
         }
 
         .error {
-            border: 1x solid red;
+            border: 1px solid red;
             padding: 12px;
             color: red;
         }
@@ -29,6 +29,10 @@
         Задание:
         Напишите код, который добавит CSS класс error для элемента DIV, размещенного в текущем документе.
         */
+
+        let div = document.querySelector("div");
+
+        div.className = "error";
     </script>
 </body>
 
