complete 03-task.html

--- a/2/005 Styles Completed/03-task.html
+++ b/2/005 Styles Completed/03-task.html
@@ -36,6 +36,17 @@
         let days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
         let busyDays = ["Monday", "Thursday", "Friday"];
 
+        days.forEach(day => {
+           let div = document.createElement("div");
+           div.textContent = day;
+           busyDays.forEach(day => {
+              if (div.textContent === day) {
+                  div.classList.add("busy-day");
+              }
+           });
+           document.body.append(div);
+        });
+
     </script>
 </body>
 
