--- a/2/005 Styles Completed/04-task.html
+++ b/2/005 Styles Completed/04-task.html
@@ -66,6 +66,16 @@
         Напишите сценарий, который добавит класс attention строкам таблицы, в которых во второй колонке находятся значения меньше 100.
         */
 
+        let table = document.querySelector("#statsTable");
+
+        let rowLength = table.rows[0].cells.length;
+
+        for (const row of table.rows) {
+            const lastCell = row.cells[rowLength - 1];
+            if (lastCell.textContent < 100) {
+                row.classList.add("attention");
+            }
+        }
         </script>
 </body>
 
