--- a/4/007 Events. Part 2 Completed/01-task.html
+++ b/4/007 Events. Part 2 Completed/01-task.html
@@ -25,6 +25,21 @@
         при нажатии на клавишу R фон div#colorOutput становился красным, 
         а при нажатии на клавишу B фон div#colorOutput становился синим.
         */
+
+        let div = document.querySelector("#colorOutput");
+        document.addEventListener("keydown", function (e) {
+           switch (e.code) {
+               case "KeyG":
+                   div.style.backgroundColor = "green";
+                   break;
+               case "KeyR":
+                   div.style.backgroundColor = "red";
+                   break;
+               case "KeyB":
+                   div.style.backgroundColor = "blue";
+                   break;
+           }
+        });
     </script>
 </body>
 
