complete 01-task.html

--- a/3/006 Events. Part 1 Completed/01-task.html
+++ b/3/006 Events. Part 1 Completed/01-task.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <button id="testBtn">Test Button</button>
+    <!-- First method: onclick -->
+    <button id="testBtn" onclick="alert(`Hello world`)">Test Button</button>
     <script>
         /*
         Задание:
@@ -17,8 +18,16 @@
         Обработчик должен выводить на экран сообщение Hello world.
         Добавьте обработчик тремя разными способами.
         */
+        let button = document.querySelector("button");
 
+        // Second method
+        // button.onclick = showMessage;
+        // function showMessage() {
+        //     alert("Hello world");
+        // }
 
+        // Third method
+        // button.addEventListener("click", () => alert("Hello world"));
     </script>
 </body>
 
