--- a/3/006 Events. Part 1 Completed/04-task.html
+++ b/3/006 Events. Part 1 Completed/04-task.html
@@ -18,6 +18,8 @@
         <li>Слива</li>
     </ul>
 
+    <button id="sort">Сортировка</button>
+
     <script>
         /*
         Задание:
@@ -25,9 +27,12 @@
         на кнопку (кнопку нужно добавить), а не при загрузке страницы
         */
         let list = document.querySelector("#list");
+        let sortBtn = document.querySelector("#sort");
 
         let items = document.querySelectorAll("li"); // получаем объект NodeList (это не массив)
         let itemsArray = Array.from(items); // на основе NodeList создаем массив
+
+        sortBtn.addEventListener("click", sortArray);
         
         // выполняем сортировку с помощью стандартного метода массива
         // так как сортируются узлы DOM нужно определить критерии, по которым узлы будут сравниваться
@@ -35,21 +40,21 @@
         // если a < b возвращать значение меньше 0
         // если a > b возвращать значение больше 0
         // если a == b возвращать 0
+        function sortArray() {
+            itemsArray.sort(function (a, b) {
+                if (a.textContent < b.textContent)
+                    return -1;
+                if (a.textContent > b.textContent)
+                    return 1;
+                return 0;
+            });
 
-        itemsArray.sort(function (a, b) {
-            if (a.textContent < b.textContent)
-                return -1;
-            if (a.textContent > b.textContent)
-                return 1;
-            return 0;
-        });
-
-        // добавление элементов в алфавитном порядке
-        // так как элементы уже есть в DOM дереве, то при добавлении элемент удаляется со своей предыдущей позиции
-        itemsArray.forEach(item => {
-            list.append(item);
-        });
-
+            // добавление элементов в алфавитном порядке
+            // так как элементы уже есть в DOM дереве, то при добавлении элемент удаляется со своей предыдущей позиции
+            itemsArray.forEach(item => {
+                list.append(item);
+            });
+        }
 
     </script>
 </body>
