complete 03-task.html

--- a/5/008 Events. Part 3 Completed/03-task.html
+++ b/5/008 Events. Part 3 Completed/03-task.html
@@ -24,8 +24,8 @@
             btn.addEventListener("click", clickHandler);
         });
 
-        function clickHandler() {
-            alert(this.innerText);
+        function clickHandler(e) {
+            alert(e.target.innerText);
         }
     </script>
 </body>
