--- a/5/008 Events. Part 3 Completed/05-task.html
+++ b/5/008 Events. Part 3 Completed/05-task.html
@@ -17,7 +17,7 @@
         }
 
         #generateButton {
-            height: 5vh;
+            height: 35px;
             background-color: green;
             color: white;
             cursor: pointer;
@@ -54,6 +54,15 @@
         Все элементы с классом interactiveElement должны поддерживать перетаскивание мышью, при левом клике клавиши по элементу он должен перемещаться
         за курсором до момента обжатия клавиши мыши.
         */
+        let generateBtn = document.querySelector("#generateButton");
+        let panel = document.querySelector("#interactivePanel");
+
+        generateBtn.addEventListener("click", handler);
+        function handler() {
+            panel.innerHTML = "";
+            for (let i = 0; i < 100; i++)
+                generateElement();
+        }
 
         // Создает и возвращает div с классом interactiveElement со случайной позицией в текущем окне
         function generateElement() {
@@ -64,7 +73,30 @@
             div.style.top = getRandomValue(maxTop) + "px";
             div.style.left = getRandomValue(maxLeft) + "px";
             div.style.backgroundColor = getRandomColor();
-            return div;
+            grab(div);
+            return panel.append(div);
+        }
+
+        function grab(elem) {
+            let move = false;
+            let offsetX, offsetY;
+            let currentDiv;
+            elem.addEventListener("mousedown", function (e) {
+                move = true;
+                offsetX = e.offsetX;
+                offsetY = e.offsetY;
+                currentDiv = e.target;
+            });
+
+            document.addEventListener("mousemove", function (e) {
+                if (move) {
+                    currentDiv.style.top = (e.clientY - 35) - offsetY + "px";
+                    currentDiv.style.left = e.clientX - offsetX + "px";
+                }
+            });
+            document.addEventListener("mouseup", function (e) {
+                move = false;
+            });
         }
 
         // возвращает случайное значение цвета 
