--- a/7/011 Classes Completed/01-task.html
+++ b/7/011 Classes Completed/01-task.html
@@ -14,14 +14,15 @@
         Задание:
         Перепишите данный код на использование классов вместо функций-конструкторов.
         */
+        class Car {
+            constructor(model, year) {
+                this.model = model;
+                this.year = year;
+            }
 
-        function Car(model, yaer) {
-            this.yaer = yaer;
-            this.model = model;
-        }
-
-        Car.prototype.showInfo = function () {
-            console.log(this.model + " " + this.yaer);
+            showInfo() {
+                console.log(this.model + " " + this.year);
+            }
         }
 
         let car1 = new Car("Audi", 2018);
