complete 05-task.html

--- a/7/011 Classes Completed/05-task.html
+++ b/7/011 Classes Completed/05-task.html
@@ -49,32 +49,39 @@
             Пройдите циклом по массиву и на каждом экземпляре класса MonthReport вызовите метод render.
         */
 
-        let source = [
-            {
-                month: "Январь",
-                amount: 20,
-                users: ["Claudia Contreras", "Blair Hayden", "Montgomery Cohen"]
-            },
-            {
-                month: "Февраль",
-                amount: 140
-            },
-            {
-                month: "Март",
-                amount: 115,
-                users: ["Blair Hayden", "Montgomery Cohen"]
+        class MonthReport {
+
+            constructor(month, amount, users) {
+                this.month = month;
+                this.amount = amount;
+                this.users = users;
             }
-        ];
+
+            get render() {
+                let tempInstance = {
+                    month: this.month,
+                    amount: this.amount,
+                    users: this.users
+                };
+                return output.insertAdjacentHTML("beforeend", Mustache.render(template, tempInstance));
+            }
+        }
+
+        let source = [];
 
         let template = document.querySelector("#monthReport").innerHTML;
         let output = document.querySelector("#output");
 
         document.querySelector("button").addEventListener("click", function () {
+            source.push(new MonthReport("Январь", 20, ["Claudia Contreras", "Blair Hayden", "Montgomery Cohen"]));
+            source.push(new MonthReport("Февраль", 140));
+            source.push(new MonthReport("Март", 115, ["Blair Hayden", "Montgomery Cohen"]));
+
             for (let i = 0; i < source.length; i++) {
-                const monthData = source[i];
-                let html = Mustache.render(template, monthData);
-                output.insertAdjacentHTML("beforeend", html);
+                source[i].render;
             }
+
+            source = [];
         });
     </script>
 </body>
