complete 03-task.html

--- a/8/012 Classes. Inheritance Complete/03-task.html
+++ b/8/012 Classes. Inheritance Complete/03-task.html
@@ -52,7 +52,7 @@
         let v1 = new Car("Mazda");
         v1.move();
 
-        let v2 = new Truck();
+        let v2 = new Truck("Грузовик");
         v2.loadCargo(1500);
         v2.move();
     </script>
