--- a/8/012 Classes. Inheritance Complete/02-task.html
+++ b/8/012 Classes. Inheritance Complete/02-task.html
@@ -24,7 +24,7 @@
             }
         }
 
-        class Truck {
+        class Truck extends Car {
             weight;
             loadCargo(weight) {
                 if (weight > 1000) {
@@ -33,6 +33,14 @@
                 else {
                     this.weight = weight;
                     console.log(`В грузовик загружено ${this.weight}кг.`);
+                }
+            }
+
+            move() {
+                if (this.weight < 500) {
+                    super.move();
+                } else {
+                    console.log("Грузовик движется со скоростью 50 км/час.");
                 }
             }
         }
