--- a/9/013 Function Context Completed/01-task.html
+++ b/9/013 Function Context Completed/01-task.html
@@ -53,14 +53,18 @@
         let elementWidth = parseInt(getComputedStyle(element).width);
         let containerWidth = parseInt(getComputedStyle(document.querySelector("#container")).width);
 
+        let stopBtn = document.querySelector("#stopBtn");
+        let increaseBtn = document.querySelector("#increaseBtn");
+        let decreaseBtn = document.querySelector("#decreaseBtn");
+
         let direction = "right";
 
         function moveLeft() {
-            element.style.left = getLeft(element) - 3 + "px";
+            element.style.left = getLeft(element) - speed + "px";
         }
 
         function moveRight() {
-            element.style.left = getLeft(element) + 3 + "px";
+            element.style.left = getLeft(element) + speed + "px";
         }
 
         function getLeft(e) {
@@ -83,8 +87,28 @@
             }
         }
 
+        let timerId;
+        let speed = 3;
+        let start = false;
+
         document.querySelector("#startBtn").addEventListener("click", function () {
-            setInterval(move, 40);
+            if (!start) {
+                timerId = setInterval(move, 40);
+                start = true;
+            }
+        });
+
+        stopBtn.addEventListener("click", () => {
+            clearInterval(timerId)
+            start = false;
+        });
+
+        increaseBtn.addEventListener("click", () => speed += 3);
+
+        decreaseBtn.addEventListener("click", () => {
+            if (speed !== 3) {
+                speed -= 3;
+            }
         });
     </script>
 </body>
