--- a/9/013 Function Context Completed/04-task.html
+++ b/9/013 Function Context Completed/04-task.html
@@ -141,7 +141,7 @@
                 this.div.classList.add("task");
 
                 let input = document.createElement("input");
-                input.addEventListener("click", this.changeState);
+                input.addEventListener("click", () => this.changeState());
                 input.type = "checkbox";
 
                 let p = document.createElement("p");
@@ -157,7 +157,7 @@
                 element.append(this.div);
             }
 
-            changeState(element) {
+            changeState() {
                 this.isDone = !this.isDone;
                 this.div.classList.toggle("completed");
             }
