--- a/9/013 Function Context Completed/05-task.html
+++ b/9/013 Function Context Completed/05-task.html
@@ -6,32 +6,102 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 05</title>
+    <style>
+        #output {
+            font-weight: bold;
+        }
+    </style>
 </head>
 
 <body>
-    <script>
-        /*
-        Задание:
-        Напишите сценарии "Игра 'Угадай число'". Суть игры - угадать за меньшее количество попыток число, которое загадал сценарий.
-        Каждый раз, когда игрок пытается угадать число, сценарий выводит подсказку - меньшее или большее число было загадано сценарием.
-        Сценарий загадывает число только один раз в начале игры и это число не меняется до завершения игры.
-        При завершении игры выведите пользователю информацию о том, с какой попытки угадано значение и сколько было потрачено на это времени.
+<label>
+    <span>Введите число от 0 до 100</span>
+    <input type="number" id="input">
+</label>
+<span id="output"></span>
+<script>
+    /*
+    Задание:
+    Напишите сценарии "Игра 'Угадай число'". Суть игры - угадать за меньшее количество попыток число, которое загадал сценарий.
+    Каждый раз, когда игрок пытается угадать число, сценарий выводит подсказку - меньшее или большее число было загадано сценарием.
+    Сценарий загадывает число только один раз в начале игры и это число не меняется до завершения игры.
+    При завершении игры выведите пользователю информацию о том, с какой попытки угадано значение и сколько было потрачено на это времени.
 
-        Для генерации случайного числа используйте следующий код:
-        let randomValue = Math.floor(Math.random() * 101); // случайное значение от 0 до 100 будет записано в переменную randomValue
-        
-        Пример игры:
-        Сценарий: я загадал случайное значение от 0 до 100
-        Пользователь: 50
-        Сценарий: я загадал значение больше, чем 50
-        Пользователь: 75
-        Сценарий: я загадал значение меньше, чем 75
-        Пользователь: 62
-        Сценарий: я загадал значение меньше, чем 62
-        Пользователь: 56
-        Сценарий: Правильно! Загаданное значение 56. Вы угадали с 4й попытки за 10 сек.
-        */
-    </script>
+    Для генерации случайного числа используйте следующий код:
+    let randomValue = Math.floor(Math.random() * 101); // случайное значение от 0 до 100 будет записано в переменную randomValue
+
+    Пример игры:
+    Сценарий: я загадал случайное значение от 0 до 100
+    Пользователь: 50
+    Сценарий: я загадал значение больше, чем 50
+    Пользователь: 75
+    Сценарий: я загадал значение меньше, чем 75
+    Пользователь: 62
+    Сценарий: я загадал значение меньше, чем 62
+    Пользователь: 56
+    Сценарий: Правильно! Загаданное значение 56. Вы угадали с 4й попытки за 10 сек.
+    */
+
+    class Timer {
+        constructor(interval) {
+            this.interval = interval;
+            this.value = 0;
+            this.timerId = null;
+        }
+
+        start() {
+            if (!this.timerId)
+                // this.tick.bind(this) - создаем новую функцию и привязываем к ней контекст, который в методе start указывает на текущий экземпляр класса Timer
+                this.timerId = setInterval(() => this.tick(), this.interval);
+        }
+
+        stop() {
+            if (this.timerId) {
+                clearInterval(this.timerId);
+            }
+        }
+
+        tick() {
+            this.value++;
+        }
+    }
+
+    let timer = new Timer(1000);
+    timer.start();
+
+    let randomValue = Math.floor(Math.random() * 101);
+
+    let input = document.querySelector("#input");
+    let output = document.querySelector("#output");
+    console.log(input.textContent);
+
+    input.addEventListener("keydown", (e) => {
+        if (e.code === "Enter") {
+            let value = Number(input.value);
+            if (value >= 0 && value <= 100) {
+                function checkAnswer() {
+                    console.log(input.value);
+                    if (value > randomValue) {
+                        output.textContent = `Загаданное значение меньше чем ${value}`;
+                    }
+                    if (value < randomValue) {
+                        output.textContent = `Загаданное значение больше чем ${value}`;
+                    }
+                    if (value === randomValue) {
+                        output.textContent = `Верно! Загаданное значение = ${randomValue}. Вы справились за ${timer.value} секунд`;
+                        timer.stop();
+                    }
+                }
+                checkAnswer();
+
+                input.value = "";
+            }
+            else {
+                output.textContent = "Введите правильное значение!";
+            }
+        }
+    });
+</script>
 </body>
 
 </html>
