--- a/8/012 Classes. Inheritance Complete/04-task.html
+++ b/8/012 Classes. Inheritance Complete/04-task.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 04</title>
     <style>
+        p {
+            margin-top: 3px;
+        }
+
         #catalog {
             display: flex;
             flex-wrap: wrap;
@@ -31,6 +35,7 @@
         <div>
             <div class="bg" style="background-image: url('{{imagePath}}');"></div>
             <p>{{price}}$</p>
+            <p>Акционная цена: {{discountPrice}}$</p>
         </div>
     </template>
 
@@ -82,6 +87,16 @@
             }
         }
 
+        class ProductWithDiscount extends Product {
+            discount;
+            discountPrice;
+            constructor(imageaPath, price, discount) {
+                super(imageaPath, price, "#product");
+                this.discount = discount;
+                this.discountPrice = this.price - (this.price / 100 * this.discount);
+            }
+        }
+
         class Advertisement extends CatalogItem {
             url;
 
@@ -90,6 +105,17 @@
                 this.url = url;
             }
         }
+
+        // Test class (1)
+        // class AdvertisementTest {
+        //     url;
+        //
+        //     constructor(imagePath, url) {
+        //         this.url = url;
+        //         this.imagePath = imagePath;
+        //         this.template = document.querySelector("#advertisement").innerHTML;
+        //     }
+        // }
 
         class Catalog {
             items = [];
@@ -100,7 +126,11 @@
             }
 
             add(item) {
-                this.items.push(item);
+                // First task
+                if (item instanceof CatalogItem)
+                    this.items.push(item);
+                else
+                    alert("Данный метод принимает только классы производные от CatalogItem");
             }
 
             show() {
@@ -116,8 +146,11 @@
         catalog.add(new Product("images/img2.jpg", 25.25));
         catalog.add(new Advertisement("images/banner1.jpg", "https://itvdn.com/ru/catalog"));
         catalog.add(new Product("images/img3.jpg", 14.55));
-        catalog.add(new Product("images/img4.jpg", 65.55));
+        catalog.add(new ProductWithDiscount("images/img4.jpg", 65.55, 20));
         catalog.add(new Advertisement("images/banner2.jpg", "https://itvdn.comru/ru/specialities"));
+
+        // Test instance (1)
+        // catalog.add(new AdvertisementTest("images/banner2.jpg", "https://itvdn.comru/ru/specialities"));
 
         catalog.show();
 
