complete 01-task.html

--- a/10/014 Closures Completed/01-task.html
+++ b/10/014 Closures Completed/01-task.html
@@ -14,13 +14,13 @@
         Задание:
         Перепишите следующий код так, чтобы он работал в любой среде выполнения (браузер, node.js и т.д.)
         */
-        if (!window.calc) {
-            window.calc = function (x, y) {
+        if (!globalThis.calc) {
+            globalThis.calc = function (x, y) {
                 alert(x + y);
             }
         }
 
-        calc(10, 20);
+        globalThis.calc(10, 20);
     </script>
 </body>
 
