--- a/11/015 Forms and Controls Completed/01-task.html
+++ b/11/015 Forms and Controls Completed/01-task.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <form >
+    <form name="loginForm">
         <div class="form-grop">
             <label>Логин</label>
             <input type="text" name="loginInput">
@@ -37,7 +37,7 @@
             <input type="text" name="lastNameInput">
         </div>
         <div class="form-grop">
-            <input type="button" value="Отобразить значения">
+            <input type="button" value="Отобразить значения" id="show-button">
         </div>
     </form>
     <script>
@@ -45,6 +45,19 @@
         Задание:
         При нажатии на кнопку "Отобразить значения", используя цикл for, выведите значения всех элементов управления input (кроме input type=button), на консоль.
         */
+
+        let showValues = document.querySelector("#show-button");
+        showValues.addEventListener("click", () => {
+            let form = document.querySelector("[name=loginForm]");
+
+            for (let i = 0; i < form.elements.length; i++) {
+                const element = form.elements[i];
+
+                if (element.type === "button") return;
+
+                console.log(element.name + " = " + element.value);
+            }
+        });
     </script>
 </body>
 
