--- a/11/015 Forms and Controls Completed/02-task.html
+++ b/11/015 Forms and Controls Completed/02-task.html
@@ -55,9 +55,14 @@
         </div>
 
         <div class="form-group">
+            <label for="amount">Количество на складе</label>
+            <input type="text" id="amount" name="amount">
+        </div>
+        
+        <div class="form-group">
             <label for="price">Валюта</label>
-            <input type="radio" id="currency" name="currency" value="USD" checked> USD
-            <input type="radio" id="currency" name="currency" value="EUR"> EUR
+            <input type="radio" class="currency" name="currency" value="USD" checked> USD
+            <input type="radio" class="currency" name="currency" value="EUR"> EUR
         </div>
         <br>
         <input id="saveButton" type="button" value="Сохранить">
@@ -80,19 +85,21 @@
         saveButton.addEventListener("click", function () {
             addRow(productForm.name.value,
                 productForm.price.value,
-                productForm.currency.value);
+                productForm.currency.value,
+                productForm.amount.value);
 
             for (let i = 0; i < productForm.elements.length; i++) {
                 const element = productForm.elements[i];
-                if (element.type == "text") element.value = "";
+                if (element.type === "text") element.value = "";
             }
         });
 
-        function addRow(name, price, currency) {
+        function addRow(name, price, currency, amount) {
             let tr = document.createElement("tr");
             tr.insertAdjacentHTML("beforeend", `<td>${name}</td>`);
             tr.insertAdjacentHTML("beforeend", `<td>${price}</td>`);
             tr.insertAdjacentHTML("beforeend", `<td>${currency}</td>`);
+            tr.insertAdjacentHTML("beforeend", `<td>${amount}</td>`)
             productsTable.append(tr);
         }
 
