complete 04-task.html

--- a/11/015 Forms and Controls Completed/04-task.html
+++ b/11/015 Forms and Controls Completed/04-task.html
@@ -275,7 +275,7 @@
         });
 
         saveButton.addEventListener("click", function () {
-            formService.saveForm();
+            if (confirm("Вы действительно хотите сохранить изменения?")) formService.saveForm();
         });
 
     </script>
