--- a/12/016 From Validation Completed/02-task.html
+++ b/12/016 From Validation Completed/02-task.html
@@ -22,16 +22,18 @@
     <form>
         <div class="form-group">
             <label>Логин</label>
-            <input type="text" name="login">
+            <input type="text" name="login" required minlength="4">
         </div>
         <div class="form-group">
             <label>Пароль</label>
-            <input type="password" name="password">
+            <input type="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#\$%\^&\*]).{6,}">
         </div>
 
         <div class="form-group">
             <input type="submit" value="Зарегистрироваться">
         </div>
+
+        <a href="#" id="checkLink">Check form</a>
     </form>
     
     <script>
@@ -45,6 +47,10 @@
         Проверку нужно организовать с помощью встроенной валидации.
         Регулярное выражение для проверки пароля - (?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#\$%\^&\*]).{6,}
         */
+
+        let form = document.forms[0];
+        let checkLink = document.querySelector("#checkLink");
+        checkLink.addEventListener("click", () => alert(form.checkValidity()));
     </script>
 </body>
 
